# SVdp-Pasco-Marketing

./: README.md  agents.yaml  crew.py  facebook_publishing_tool.py  main.py  pinecone_storage_tool.py  pyproject.toml  squarespace_publishing_tool.py  tasks.yaml
