[project]
name = "st_vincent_de_paul_smart_content_marketing_automation"
version = "0.1.0"
description = "st_vincent_de_paul_smart_content_marketing_automation using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.203.0,<1.0.0"
]

[project.scripts]
st_vincent_de_paul_smart_content_marketing_automation = "st_vincent_de_paul_smart_content_marketing_automation.main:run"
run_crew = "st_vincent_de_paul_smart_content_marketing_automation.main:run"
train = "st_vincent_de_paul_smart_content_marketing_automation.main:train"
replay = "st_vincent_de_paul_smart_content_marketing_automation.main:replay"
test = "st_vincent_de_paul_smart_content_marketing_automation.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
